--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,9 @@ AllCops:
 Layout/EmptyLinesAroundClassBody:
   EnforcedStyle: empty_lines_except_namespace
 
+Metrics/MethodLength:
+  Max: 25
+
 Style/ClassAndModuleChildren:
   EnforcedStyle: compact
   Exclude:
